--- a/app/grandchallenge/notifications/templates/notifications/notification_list.html
+++ b/app/grandchallenge/notifications/templates/notifications/notification_list.html
@@ -19,8 +19,7 @@
                 {% if notifications_last_read_at is None or notifications_last_read_at < object.timestamp %}
                     <span class="text-primary align-middle mr-2"><i class="fa fa-circle"></i></span>
                 {% endif %}
-                {{ object.actor|user_profile_link }}
-                {{ object.verb }}
+                {{ object.actor|user_profile_link }}{{ object.verb }}
                 {% if object.action_object %}
                     <a href="{{ object.action_object.get_absolute_url }}">{{ object.action_object }}</a>
                     {% if object.target %}
