Allow window-preset definitions with percentiles (#1802)

--- a/app/grandchallenge/workstation_configs/templates/workstation_configs/workstationconfig_detail.html
+++ b/app/grandchallenge/workstation_configs/templates/workstation_configs/workstationconfig_detail.html
@@ -36,6 +36,7 @@
                     <div>{{ x }}</div>
                 {% endfor %}
             </td>
+        <td>{{ object.get_window_preset_display }}</td>
         </tr>
         <tr>
             <td class="font-weight-bold">Default window preset</td>
