--- a/app/grandchallenge/workspaces/templates/workspaces/workspace_form.html
+++ b/app/grandchallenge/workspaces/templates/workspaces/workspace_form.html
@@ -18,6 +18,40 @@
     </ol>
 {% endblock %}
 
+{% block sidebar %}
+    <div class="nav nav-pills d-none {% if challenge.phase_set.count > 4 %}d-lg-inline-flex{% elif challenge.phase_set.count == 4 %}d-md-inline-flex{% else %}d-sm-inline-flex{% endif %} col-12 pl-3 mb-3">
+        {% if "change_challenge" in challenge_perms or user_is_participant %}
+            {% for phase in challenge.phase_set.all %}
+                <li class="nav-item">
+                    <a class="nav-link mr-1 px-4 py-1 {% if request.resolver_match.view_name == 'workspaces:create' and request.resolver_match.kwargs.slug == phase.slug %}active{% endif %}"
+                       href="{% url 'workspaces:create' challenge_short_name=challenge.short_name slug=phase.slug %}">{{ phase.title }}</a>
+                </li>
+            {% endfor %}
+        {% endif %}
+    </div>
+    <div class="nav nav-pills d-flex {% if challenge.phase_set.count > 4 %}d-lg-none{% elif challenge.phase_set.count == 4 %}d-md-none{% else %}d-sm-none{% endif %} col-12 pl-3 mb-3">
+        {% if "change_challenge" in challenge_perms or user_is_participant %}
+            <div class="btn dropdown border-0 px-0 py-0 mb-1">
+                <a class="btn btn-outline-dark dropdown-toggle phaseButton mr-1 px-4"
+                   data-toggle="dropdown"
+                   href="#"
+                   role="button"
+                   aria-expanded="false">
+                    Choose a Phase</a>
+                <div class="dropdown-menu dropdown-menu-left" role="menu">
+                    {% for phase in challenge.phase_set.all %}
+                        <li class="dropdown-item challengeDropdown px-0 py-0">
+                            <a class="nav-link mr-1 px-4 py-1"
+                           href="{% url 'workspaces:create' challenge_short_name=challenge.short_name slug=phase.slug %}"
+                            style="color: black">{{ phase.title }}</a>
+                        </li>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
+    </div>
+{% endblock %}
+
 {% block content %}
     <h2>Create a Workspace</h2>
 
